[package]
name = "stream_reassembly_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream_reassembly = {path = "../../../stream_reassembly/"}
clap = { version = "3.1.0", features = ["derive"] }
